Resultados/Raony/main/result_compilation.txt
In file included from tJogo.h:5,
                 from main.c:1:
tFantasma.h:25:21: error: unknown type name ‘tJogo’
   25 | void MoveFantasmas (tJogo * jogo);
      |                     ^~~~~
In file included from tFantasma.h:5,
                 from tFantasma.c:1:
tJogo.h:22:5: error: unknown type name ‘tFantasma’
   22 |     tFantasma * fantasmaB;
      |     ^~~~~~~~~
tJogo.h:23:5: error: unknown type name ‘tFantasma’
   23 |     tFantasma * fantasmaC;
      |     ^~~~~~~~~
tJogo.h:24:5: error: unknown type name ‘tFantasma’
   24 |     tFantasma * fantasmaI;
      |     ^~~~~~~~~
tJogo.h:25:5: error: unknown type name ‘tFantasma’
   25 |     tFantasma * fantasmaP;
      |     ^~~~~~~~~
tJogo.h:34:1: error: unknown type name ‘tFantasma’
   34 | tFantasma* RetornaFantasmaB(tJogo * jogo);
      | ^~~~~~~~~
tJogo.h:36:1: error: unknown type name ‘tFantasma’
   36 | tFantasma* RetornaFantasmaC(tJogo * jogo);
      | ^~~~~~~~~
tJogo.h:38:1: error: unknown type name ‘tFantasma’
   38 | tFantasma* RetornaFantasmaI(tJogo * jogo);
      | ^~~~~~~~~
tJogo.h:40:1: error: unknown type name ‘tFantasma’
   40 | tFantasma* RetornaFantasmaP(tJogo * jogo);
      | ^~~~~~~~~
tJogo.h:44:55: error: unknown type name ‘tFantasma’
   44 | tJogo* InicializaJogo(tMapa * mapa, tPacman * pacman, tFantasma * fb, tFantasma * fc, tFantasma * fi, tFantasma * fp);
      |                                                       ^~~~~~~~~
tJogo.h:44:71: error: unknown type name ‘tFantasma’
   44 | tJogo* InicializaJogo(tMapa * mapa, tPacman * pacman, tFantasma * fb, tFantasma * fc, tFantasma * fi, tFantasma * fp);
      |                                                                       ^~~~~~~~~
tJogo.h:44:87: error: unknown type name ‘tFantasma’
   44 | tJogo* InicializaJogo(tMapa * mapa, tPacman * pacman, tFantasma * fb, tFantasma * fc, tFantasma * fi, tFantasma * fp);
      |                                                                                       ^~~~~~~~~
tJogo.h:44:103: error: unknown type name ‘tFantasma’
   44 | tJogo* InicializaJogo(tMapa * mapa, tPacman * pacman, tFantasma * fb, tFantasma * fc, tFantasma * fi, tFantasma * fp);
      |                                                                                                       ^~~~~~~~~
tFantasma.c: In function ‘CriaFantasma’:
tFantasma.c:62:1: warning: control reaches end of non-void function [-Wreturn-type]
   62 | }
      | ^
In file included from tJogo.h:5,
                 from tJogo.c:1:
tFantasma.h:25:21: error: unknown type name ‘tJogo’
   25 | void MoveFantasmas (tJogo * jogo);
      |                     ^~~~~
tJogo.c: In function ‘RetornaPacman’:
tJogo.c:62:1: warning: control reaches end of non-void function [-Wreturn-type]
   62 | }
      | ^
tJogo.c: In function ‘RetornaMapa’:
tJogo.c:66:1: warning: control reaches end of non-void function [-Wreturn-type]
   66 | }
      | ^
tJogo.c: In function ‘RetornaFantasmaB’:
tJogo.c:70:1: warning: control reaches end of non-void function [-Wreturn-type]
   70 | }
      | ^
tJogo.c: In function ‘RetornaFantasmaC’:
tJogo.c:74:1: warning: control reaches end of non-void function [-Wreturn-type]
   74 | }
      | ^
tJogo.c: In function ‘RetornaFantasmaI’:
tJogo.c:78:1: warning: control reaches end of non-void function [-Wreturn-type]
   78 | }
      | ^
tJogo.c: In function ‘RetornaFantasmaP’:
tJogo.c:82:1: warning: control reaches end of non-void function [-Wreturn-type]
   82 | }
      | ^
